fix: guard against empty successor list and include standalone entities in ER transform